force-app/main/default/objects/Sentry_Retrieval_Job__c/Sentry_Retrieval_Job__c.object-meta.xml
<CustomObject>
    <description>Tracks retrieval and processing jobs for Event Log Files and backfill activities.</description>
    <label>Sentry Retrieval Job</label>
    <nameField>
        <displayFormat>SRJ-{000000}</displayFormat>
        <label>Sentry Retrieval Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentry Retrieval Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>