force-app/main/default/objects/Sentry_Retrieval_Job__c/fields/Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Result_Summary__c</fullName>
    <label>Result Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>