force-app/main/default/objects/Sentry_Retrieval_Job__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>EventLogFile</fullName><default>true</default><label>Event Log File</label></value>
            <value><fullName>PlatformEvent</fullName><default>false</default><label>Platform Event</label></value>
            <value><fullName>ChangeDataCapture</fullName><default>false</default><label>Change Data Capture</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>